--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "es2015-nutshell",
+  "description": "Next Generation JavaScript with ES 2015",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sebastianhenneberg/es2015-talk.git"
+  },
   "version": "1.0.0",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.0.0",
     "babel-preset-es2015": "^6.6.0"
-  }
+  },
+  "scripts": {
+    "b": "babel",
+    "bn": "babel-node"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "author": "Sebastian Henneberg",
+  "license": "MIT"
 }
